# SO_Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  master.cpp  run.sh
include/: Logger.h  LoggerService.h  Utilities.h
include/logger/: Logger.h  LoggerService.h
include/patient/: Patient.h  PatientGenerator.h
src/: Logger.cpp  LoggerService.cpp  dispatcher.cpp  doctor.cpp  patient.cpp  registration.cpp  triage.cpp
src/logger/: Logger.cpp  LoggerService.cpp
src/patient/: Patient.cpp  PatientGenerator.cpp  _patient.cpp
tools/: read_registry.cpp  send_ctrl.cpp
